# Culinary-Hub-recipe-site

./: .gitignore  Django.docx  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  ТЗ  Python Web on Django.odt
culinary_hub/: asgi.py  settings.py  urls.py  wsgi.py
personal_assistant/news/templates/news/: index.html  weather.js
personal_assistant/personal_assistant/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_recipe_created_at_recipe_image_recipe_tag_field_and_more.py  0002_recipe_created_at_recipe_tag_field.py  0003_customuser.py  0003_recipe_confirmation.py  0004_myuser_delete_customuser.py  0004_tag_slug.py  0005_alter_tag_slug.py  0005_user_delete_myuser.py  0006_alter_tag_slug.py  0006_delete_user.py  0007_alter_tag_slug.py  0007_recipe_user.py  0008_rating_created_at_rating_user_recipe_average_rating_and_more.py  0008_recipe_image.py  0009_alter_recipe_average_rating.py  0009_remove_recipe_image.py  0010_alter_recipe_average_rating.py  0010_recipe_image.py
recipes/static/recipes/: style.css
recipes/templates/recipes/: base.html  detail.html  index.html  recipe-conf.html  recipe.html  recipe_list.html  stars.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_delete_customuser.py  0003_initial.py  0004_alter_profile_avatar.py  0005_alter_profile_avatar.py
users/templates/users/: login.html  profile.html  signup.html
