[tool.poetry]
name = "culinary-hub-recipe-site"
version = "0.1.0"
description = ""
authors = ["Olga Mageria <olgamageria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
rest-framework-simplejwt = "^0.0.2"
django-environ = "^0.11.2"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
cloudinary = "^1.41.0"
django-cloudinary-storage = "^0.3.0"
django-taggit = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
